# crypto_data_fetcher

./: Pipfile  README.md  setup.cfg
.github/workflows/: python-app.yml
crypto_data_fetcher/: __init__.py  binance_future.py  binance_spot.py  bybit.py  ftx.py  gmo.py  kraken.py  okex.py  types.py  utils.py
tests/: test_binance_future.py  test_binance_spot.py  test_bybit.py  test_bybit_linear.py  test_ftx.py  test_ftx_private.py  test_gmo.py  test_kraken.py  test_okex.py  test_utils.py
